<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingTop="32dp">

    <TextView
        android:id="@+id/timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textview_game_frequency_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/game_frequency" />

    <TextView
        android:id="@+id/frequency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.slider.Slider
        android:id="@+id/slider_frequency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:labelBehavior="gone" />

    <TextView
        android:id="@+id/textview_game_volume_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/game_volume" />

    <TextView
        android:id="@+id/volume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.slider.Slider
        android:id="@+id/slider_volume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stepSize="1"
        android:valueTo="15"
        app:labelBehavior="gone"
        app:tickVisible="false" />

    <TextView
        android:id="@+id/textview_game_foxes_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/game_foxes" />

    <androidx.compose.ui.platform.ComposeView
        android:id="@+id/foxes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/game_finish" />

    <Button
        android:id="@+id/button_game_debug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/game_debug" />
</LinearLayout>
